--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://bitbucket.org/tiferreira12/sulbaguia#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "morgan": "^1.9.1"
   }
