--- a/node-app/package.json
+++ b/node-app/package.json
@@ -14,11 +14,12 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/tiferreira12/sulbaguia#readme",
   "dependencies": {
-    "@google-cloud/storage": "^2.3.1",
+    "@google-cloud/storage": "^2.4.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "formidable": "^1.2.1",
     "moment": "^2.22.2",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
