Enviroment variables + minor improvements

--- a/node-app/pm2config.prod.json
+++ b/node-app/pm2config.prod.json
@@ -1,6 +1,6 @@
 {
   "apps": [{
-    "script" : "./node-app/src/server.js",
+    "script" : "./src/server.js",
     "env": {
       "NODE_ENV": "production",
       "PORT": "8080"
