--- a/angular-admin/package.json
+++ b/angular-admin/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "angular2-hotkeys": "^2.1.4",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
