--- a/node-app/package.json
+++ b/node-app/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.4.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1"
