--- a/node-app/package.json
+++ b/node-app/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node ./src/server.js",
+    "watch": "pm2 start src/server.js --watch && pm2 log",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gcloud app deploy --quiet",
     "gae_logs": "gcloud app logs tail -s default"
