Create STG project

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "start": "node ./src/server.js",
     "start-local": "pm2 start src/server.js --watch && pm2 log",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gcloud app deploy --project sulbaguia --quiet",
+    "deploy-stg": "gcloud app deploy --project sulbaguia-stg --quiet app-staging.yaml",
+    "deploy-production": "gcloud app deploy --project sulbaguia --quiet app-production.yaml",
     "gae_logs": "gcloud app logs tail -s default"
   },
   "repository": {
