--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://bitbucket.org/tiferreira12/sulbaguia#readme",
   "dependencies": {
     "@google-cloud/storage": "2.4.x",
+    "@google/maps": "^0.5.5",
     "@types/jquery": "^3.3.29",
     "body-parser": "1.18.x",
     "config": "3.0.x",
