--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "ejs": "2.6.x",
     "express": "4.16.x",
     "express-jwt": "5.3.x",
+    "express-session": "^1.16.1",
     "formidable": "1.2.x",
+    "i18n-express": "^1.1.3",
     "jsonwebtoken": "8.4.x",
     "moment": "2.22.x",
     "moment-timezone": "0.5.x",
